# kiota-serialization-form-python

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml  publish.yml
kiota_serialization_form/: __init__.py  form_parse_node.py  form_parse_node_factory.py  form_serialization_writer.py
tests/: test_form_parse_node.py  test_form_serialization_writer.py
tests/helpers/: test_entity.py  test_enum.py
tests/unit_tests/: test_form_parse_node.py  test_form_serialization_writer.py
